--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,11 +1,35 @@
+.infoCardHeadline {
+    font-family: serif;
+    font-size: 2.25rem;
+    font-weight: normal;
+    color: gray;
+    border: 2px solid black;
+    padding: 24px;
+}
+
+.infoCardCallActionContainer :global(.vtex-button) {
+    color: white;
+    background-color: gray;
+    border: transparent;
+}
+
+.infoCardCallActionContainer :global(.vtex-button):hover {
+    color: gray;
+    background-color: white;
+    border: transparent;
+}
 .infoCardContainer--vintage {
-    background-color: #EDCFD1;
-    margin:0 auto;
-    padding: 0;
-    max-width: 1260px;
-    color:black;
-    font-weight: bold;
+    background-color: #EDCFD1
   }
-  .infoCardContainer--metal{
-      color: #e1e1e1;
+  .infoCardContainer{
+      max-width: 1260px;
+      margin: 0 auto;
+      padding: 0;
   }
+  .infoCardHeadline{
+      font-weight: bold;
+      color: black;
+  }
+.infoCardContainer--metal{
+    background-color: #e1e1e1;
+}
