--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -36,3 +36,7 @@
 .sliderLayoutContainer{
     margin-top: 10px !important;
 }
+.container :global(.vtex-button){
+    background-color: green;
+    border:none;
+}
