--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,3 +1,9 @@
+.logoContainer{
+    background-image: url("https://estacaodamodastore.vteximg.com.br/arquivos/logo.svg");
+    background-repeat: no-repeat;
+    width: 100% !important;
+    height: 100% !important;
+}
 .infoCardHeadline {
     font-family: serif;
     font-size: 2.25rem;
